--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "msw": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.22",
-    "prettier": "2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
