--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "/public/build"
   ],
   "dependencies": {
+    "@conform-to/react": "^0.7.0",
+    "@conform-to/zod": "^0.7.0",
     "@remix-run/css-bundle": "^1.17.0",
     "@remix-run/node": "^1.17.0",
     "@remix-run/react": "^1.17.0",
@@ -26,7 +28,8 @@
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.0",
