--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
+    "dev": "remix dev -c \"npm run dev:serve\"",
+    "dev:serve": "binode --require ./mocks -- @remix-run/serve:remix-serve ./build",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
@@ -12,43 +13,44 @@
     "typecheck": "tsc",
     "validate": "run-p lint typecheck"
   },
-  "prettier": {},
-  "eslintIgnore": [
-    "/node_modules",
-    "/build",
-    "/public/build"
-  ],
   "dependencies": {
-    "@remix-run/css-bundle": "^1.17.0",
-    "@remix-run/node": "^1.17.0",
-    "@remix-run/react": "^1.17.0",
-    "@remix-run/serve": "^1.17.0",
-    "isbot": "^3.6.8",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@remix-run/css-bundle": "^1.19.1",
+    "@remix-run/node": "^1.19.1",
+    "@remix-run/react": "^1.19.1",
+    "@remix-run/serve": "^1.19.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "isbot": "^3.6.13",
+    "lucide-react": "^0.263.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "tiny-invariant": "^1.3.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.17.0",
-    "@remix-run/eslint-config": "^1.17.0",
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@remix-run/dev": "^1.19.1",
+    "@remix-run/eslint-config": "^1.19.1",
+    "@types/eslint": "^8.44.0",
+    "@types/node": "^20.4.4",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "binode": "^1.0.5",
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.38.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "msw": "^1.2.1",
+    "msw": "^1.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.22",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.4"
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18"
